# android-bfh

./: .gitlab-ci.yml  README.md
01_HelloWorld/app/: build.gradle
01_HelloWorld/gradle/wrapper/: gradle-wrapper.properties
02_SMS/app/: build.gradle
02_SMS/app/src/main/: AndroidManifest.xml
02_SMS/gradle/wrapper/: gradle-wrapper.properties
03_Key_Value_Viewer/: settings.gradle
03_Key_Value_Viewer/app/: build.gradle
03_Key_Value_Viewer/gradle/wrapper/: gradle-wrapper.properties
04_PictureApp/: settings.gradle
04_PictureApp/app/: build.gradle
04_PictureApp/gradle/wrapper/: gradle-wrapper.properties
05_MultiLanguage/app/: build.gradle
05_MultiLanguage/gradle/wrapper/: gradle-wrapper.properties
06_Web/: settings.gradle
06_Web/app/: build.gradle
06_Web/app/src/main/: AndroidManifest.xml
06_Web/gradle/wrapper/: gradle-wrapper.properties
07_IP/: settings.gradle
07_IP/app/: build.gradle
07_IP/gradle/wrapper/: gradle-wrapper.properties
08_Broadcast/app/: build.gradle
08_Broadcast/gradle/wrapper/: gradle-wrapper.properties
09_ContentProvider/app/: build.gradle
09_ContentProvider/gradle/wrapper/: gradle-wrapper.properties
10_JNI/app/: build.gradle
10_JNI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
10_JNI/gradle/wrapper/: gradle-wrapper.properties
11_Streaming/: settings.gradle
11_Streaming/app/: build.gradle
11_Streaming/gradle/wrapper/: gradle-wrapper.properties
20_Library/: .gitignore
20_Library/app/: build.gradle
20_Library/app/debug/: output-metadata.json
20_Library/gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
